--- a/server/native/pom.xml
+++ b/server/native/pom.xml
@@ -121,6 +121,7 @@
               <executable>make</executable>
               <workingDirectory>${project.build.directory}/${project.artifactId}-${project.version}/${project.artifactId}-${project.version}</workingDirectory>
               <arguments>
+                <argument>--just-print</argument>
                 <argument>test</argument>
                 <argument>CXX=${CXX}</argument>
                 <argument>OUTPUT_DIR=${project.build.directory}</argument>
